# dirprobe

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONVENTIONS.md  LICENSE  README.md  SYNTHETIC_SYSTEMS.md  pyproject.toml
src/dirprobe/: __init__.py  __main__.py  _constants.py  pipeline.py
src/dirprobe/data/: DATA_SHA256SUMS.txt  __init__.py
src/dirprobe/gating/: amplitude.py
src/dirprobe/io/: npz.py
src/dirprobe/moments2/: coherence.py  pooling.py  tensor.py
src/dirprobe/moments4/: __init__.py
src/dirprobe/reproduce/: __main__.py  formatting.py  jsonio.py  table2.py  table3.py  table4.py
src/dirprobe/robustness/: suite.py
src/dirprobe/synthetic/: __main__.py  bundle.py  generators.py  systems.py  vmf.py
src/dirprobe/time/: persistence.py
tests/: test_conventions_locked.py
tests/fixtures/cross_validation/: cfg6_principal_axes.npz  cfg6_site0_unit_vectors.npz  cfg6_site_tensors.npz  cfg8_persistence_W4.npz  cfg8_raw_displacements.npz  cfg8_site_tensors.npz  degeneracy_flags.json  gating_masks.npz  (+7 more)
tests/test_cross_validation/: conftest.py  test_tier1.py  test_tier1_5.py  test_tier2.py  test_tier3.py
tests/test_gating/: test_amplitude.py
tests/test_moments2/: test_coherence.py  test_pooling.py  test_tensor.py
tests/test_pipeline/: test_end_to_end.py
tests/test_reproduce/: test_data_and_table4.py  test_table2_from_generators.py  test_table3_from_generators.py  test_table4_from_displacements.py
tests/test_robustness/: test_suite.py
tests/test_synthetic/: test_generators.py  test_systems.py
tests/test_time/: test_persistence.py
(+19 files in other folders)
