[project]
name = "dirprobe"
version = "1.0.0"
description = "Directional diagnostics for site-resolved trajectory data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Nitin Bijewar"}]
dependencies = ["numpy>=1.20", "scipy>=1.7"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
figures = ["matplotlib>=3.5"]
dev = ["pytest", "ruff"]

[project.scripts]
dirprobe = "dirprobe.__main__:main"

[project.urls]
Homepage = "https://github.com/nitinbijewar/dirprobe"
Repository = "https://github.com/nitinbijewar/dirprobe"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dirprobe = ["data/**/*.json", "data/**/*.txt", "data/**/*.npz", "data/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
